--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,12 @@
     </properties>
 
     <dependencies>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-        <version>3.2.0</version>
-    </dependencies>
+        <dependency> 
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        </dependencies>
 
     <build>
         <plugins>
